# s2

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  Cross.toml  Dockerfile  README.md  cliff.toml  clippy.toml  deny.toml  index.yaml  install.sh  justfile  release-plz.toml
.claude/skills/release/: SKILL.md
.github/workflows/: build-s2-lite.yml  bump-chart-version.yml  ci.yml  cli-release-plz.yml  cli-release.yml  docker.yml  helm-release.yml  pr-title.yml  release-cli.yml  release-crates.yml  release-plz.yml  release.yml  runner-specs.yml  sdk-tests.yml  sync-specs.yaml  sync_specs.yaml  test-builds.yml  test-cross.yml
api/: CHANGELOG.md  Cargo.toml  build.rs
api/proptest-regressions/v1/stream/: s2s.txt
api/protos/s2/v1/: openapi.json
api/src/: data.rs  lib.rs  mime.rs
api/src/v1/: access.rs  basin.rs  config.rs  error.rs  extractors.rs  location.rs  metrics.rs  mod.rs  scope.rs
api/src/v1/stream/: extract.rs  json.rs  mod.rs  proto.rs  s2s.rs  sse.rs
api/src/v1/stream/proto/: mod.rs
charts/s2-lite/: README.md  values.yaml
charts/s2-lite-helm/: Chart.yaml  values.yaml
charts/s2-lite-helm/templates/: deployment.yaml
charts/s2-lite/templates/: NOTES.txt  deployment.yaml  pdb.yaml  pvc.yaml  servicemonitor.yaml  statefulset.yaml
cli/: CHANGELOG.md  Cargo.toml  build.rs  release-plz.toml  schema.json
cli/src/: apply.rs  bench.rs  cli.rs  config.rs  diff.rs  error.rs  main.rs  ops.rs  record_format.rs  types.rs  update.rs
cli/src/tui/: app.rs  event.rs  mod.rs  ui.rs
cli/src/update/: apply.rs  channel.rs  mod.rs
cli/tests/: cli.rs  integration.rs
common/: CHANGELOG.md  Cargo.toml
common/src/: access.rs  bash.rs  basin.rs  caps.rs  config.rs  deep_size.rs  encryption.rs  header.rs  http.rs  lib.rs  maybe.rs  read_extent.rs  resources.rs  stream.rs
common/src/encryption/: config.rs  crypto.rs  mod.rs
common/src/record/: batcher.rs  command.rs  encrypted.rs  encryption.rs  envelope.rs  fencing.rs  iterator.rs  metering.rs  mod.rs  protection.rs
common/src/types/: access.rs  basin.rs  config.rs  location.rs  metrics.rs  mod.rs  resources.rs  scope.rs  stream.rs
docs/: notes.md
docs/adr/: csek.md
hyper-side-effect/: Cargo.toml
hyper-side-effect/src/: lib.rs
lite/: CHANGELOG.md  Cargo.toml  Dockerfile
lite/docs/: notes.md  scratch.md  todo.md
lite/src/: init.rs  lib.rs  metrics.rs  request_log.rs  server.rs  stream_id.rs
lite/src/backend/: append.rs  basins.rs  core.rs  db.rs  error.rs  kv.rs  mod.rs  ops.rs  protection.rs  read.rs  slatedb.rs  store.rs  stream_id.rs  streamer.rs  streams.rs
lite/src/backend/bgtasks/: basin_deletion.rs  mod.rs  stream_doe.rs  stream_trim.rs
lite/src/backend/kv/: basin_deletion_pending.rs  basin_meta.rs  mod.rs  stream_doe_deadline.rs  stream_fencing_token.rs  stream_id_mapping.rs  stream_meta.rs  stream_record_data.rs  stream_record_timestamp.rs  stream_tail_position.rs  stream_trim_point.rs  timestamp.rs
lite/src/handlers/: mod.rs
lite/src/handlers/v1/: access_tokens.rs  basins.rs  error.rs  locations.rs  metrics.rs  mod.rs  paths.rs  records.rs  scopes.rs  streams.rs  tokens.rs
lite/tests/: backend_tests.rs
lite/tests/backend/: common.rs  mod.rs
lite/tests/backend/common/: mod.rs  read.rs  setup.rs
lite/tests/backend/control_plane/: basin.rs  mod.rs  stream.rs
lite/tests/backend/data_plane/: append.rs  auto_create.rs  encryption.rs  mixed.rs  mod.rs  read.rs  read_follow.rs
resource-spec/: CHANGELOG.md  Cargo.toml
resource-spec/src/: lib.rs
sdk/: CHANGELOG.md  Cargo.toml  README.md
sdk/examples/: caught_up.rs  consumer.rs  docs_account_and_basins.rs  docs_configuration.rs  docs_encryption.rs  docs_streams.rs  list_all_basins.rs
sdk/src/: api.rs  batching.rs  client.rs  lib.rs  ops.rs  producer.rs  retry.rs  types.rs
sdk/src/session/: append.rs  mod.rs  read.rs
sdk/tests/: account_ops.rs  basin_ops.rs  metrics_ops.rs  stream_ops.rs  test_util.rs
sim/: Cargo.toml
sim/src/: main.rs  meta.rs  s3.rs
sim/src/scenarios/: linearizable.rs  mod.rs
storage/: CHANGELOG.md  Cargo.toml
storage/src/: bash.rs  lib.rs  stream.rs  types.rs
storage/src/record/: batcher.rs  codec.rs  encoding.rs  encryption.rs  framing.rs  iterator.rs  mod.rs  stream_payload.rs  test_util.rs
testcontainers/: CHANGELOG.md  Cargo.toml  README.md
testcontainers/examples/: s2_lite.rs
testcontainers/src/: lib.rs
