[workspace]
resolver = "2"
members = [
    "common",
    "api",
    "lite",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
async-trait = "0.1.89"
base64ct = { version = "1.8.0", features = ["alloc"] }
bytes = "1.10.1"
compact_str = "0.9.0"
clap = { version = "4.5.50", features = ["derive"] }
const_format = "0.2.35"
enum-ordinalize = "4.3.0"
enumset = "1.1.10"
eyre = "0.6.12"
futures = "0.3.31"
http = "1.3.1"
itertools = "0.14.0"
proptest = "1.8.0"
prost = "0.14.1"
prost-build = "0.14.1"
rkyv = "0.8.12"
rstest = "0.26.1"
serde = { version = "1.0.228", features = ["derive"] }
strum = { version = "0.27", features = ["derive"] }
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["serde", "parsing", "formatting"] }
utoipa = { git = "https://github.com/infiniteregrets/utoipa", rev = "dee66d14360e91dfa38bad728be2cecc735368de" }
