[workspace]
resolver = "2"
members = ["api", "common", "lite"]

[workspace.package]
version = "0.4.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/s2-streamstore/s2"
homepage = "https://s2.dev"

[workspace.dependencies]
async-stream = "0.3"
async-trait = "0.1"
aws-config = "1"
aws-credential-types = "1"
axum = "0.8"
axum-server = "0.8"
base64ct = "1.8"
blake3 = "1.8"
bytes = "1.11"
bytesize = "2.3"
clap = "4.5"
compact_str = "0.9"
dashmap = "6.1"
enum-ordinalize = "4.3"
enumset = "1.1"
eyre = "0.6"
flate2 = "1.1"
futures = "0.3"
http = "1.4"
itertools = "0.14"
mime = "0.3"
mimalloc = "0.1"
parking_lot = "0.12"
prometheus = "0.14"
proptest = "1.9"
prost = "0.14"
prost-build = "0.14"
rand = "0.9"
rcgen = "0.14"
rkyv = "0.8"
rstest = "0.26"
s2-api = { version = "0.4.0", path = "api" }
s2-common = { version = "0.4.0", path = "common" }
serde = "1.0"
serde_json = "1.0"
slatedb = "0.10"
strum = "0.27"
thiserror = "2.0"
time = "0.3"
tokio = "1.49"
tokio-util = "0.7"
tower-http = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
utoipa = "5.4"
uuid = "1.20"
zstd = "0.13"

[workspace.lints.rust]
unsafe_code = "warn"
rust_2024_compatibility = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Allowed pedantic lints
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"

# Restriction lints worth enabling
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
empty_structs_with_brackets = "warn"
exit = "warn"
format_push_string = "warn"
if_then_some_else_none = "warn"
infinite_loop = "warn"
large_include_file = "warn"
map_with_unused_argument_over_ranges = "warn"
mem_forget = "warn"
missing_assert_message = "warn"
mixed_read_write_in_expression = "warn"
multiple_inherent_impl = "warn"
needless_raw_strings = "warn"
panic_in_result_fn = "warn"
print_stderr = "warn"
print_stdout = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
redundant_type_annotations = "warn"
rest_pat_in_fully_bound_structs = "warn"
self_named_module_files = "warn"
semicolon_outside_block = "warn"
str_to_string = "warn"
string_lit_chars_any = "warn"
tests_outside_test_module = "warn"
try_err = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
unseparated_literal_suffix = "warn"
verbose_file_reads = "warn"

[patch.crates-io]
slatedb = { git = "https://github.com/slatedb/slatedb", rev = "e9022295cd03c7b3273c9b6518c8daff91d677c5" }
utoipa = { git = "https://github.com/infiniteregrets/utoipa", rev = "9cd181d40ac0a50551ebe1995a4d73e8685890d6" }
