[workspace]
resolver = "2"
members = [
    "api",
    "cli",
    "common",
    "lite",
    "resource-spec",
    "sdk",
    "sim",
    "storage",
    "testcontainers",
]
# sim (deterministic simulation testing) is excluded from default builds so
# its dependencies (turmoil, mad-turmoil, ...) are only compiled when explicitly
# requested, e.g. `just sim` or `cargo build -p s2-sim`.
default-members = [
    "api",
    "cli",
    "common",
    "lite",
    "resource-spec",
    "sdk",
    "storage",
    "testcontainers",
]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/s2-streamstore/s2"
homepage = "https://s2.dev"

[workspace.dependencies]
aegis = "0.9"
aes-gcm = "0.10"
async-stream = "0.3"
async-trait = "0.1"
aws-config = "1"
aws-credential-types = "1"
axum = "0.8"
axum-server = "0.8"
base64ct = "1.8"
blake3 = "1.8"
bytes = "1.11"
bytesize = "2.3"
clap = "4.6"
color-print = "0.3"
colored = "3.1"
compact_str = "0.9"
config = "0.15"
dashmap = "6.2"
dirs = "6.0"
enumset = "1.1"
eyre = "0.6"
flate2 = "1.1"
futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"
http = "1.4"
humantime = "2.3"
indexmap = "2.14"
indicatif = "0.18"
itertools = "0.14"
json_to_table = "0.13"
miette = "7.6"
mime = "0.3"
parking_lot = "0.12"
prometheus = "0.14"
proptest = "1.11"
prost = "0.14"
prost-build = "0.14"
rand = "0.10"
rcgen = { version = "0.14", default-features = false, features = ["crypto", "pem", "aws_lc_rs"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rkyv = "0.8"
rstest = "0.26"
rustls = { version = "0.23", default-features = false, features = ["logging", "std", "tls12"] }
s2-api = { path = "api", version = "0.30" }
s2-common = { path = "common", version = "0.39" }
s2-lite = { path = "lite", version = "0.36" }
s2-resource-spec = { path = "resource-spec", version = "0.1" }
s2-sdk = { path = "sdk", version = "0.31" }
s2-storage = { path = "storage", version = "0.1" }
schemars = "1.2"
secrecy = "0.10.3"
serde = "1.0"
serde_json = "1.0"
slatedb = "0.13.1"
sonic-rs = "0.5"
strum = "0.28"
tabled = "0.21"
testcontainers = "0.27"
thiserror = "2.0"
tikv-jemallocator = { version = "0.7", features = ["unprefixed_malloc_on_supported_platforms"] }
time = "0.3"
tokio = "1.52"
tokio-stream = "0.1"
tokio-util = "0.7"
toml = "1.1"
tower-http = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
utoipa = "=5.4"
uuid = "1.23"
xxhash-rust = "0.8"
zstd = "0.13"

[patch.crates-io]
utoipa = { git = "https://github.com/infiniteregrets/utoipa", rev = "9cd181d40ac0a50551ebe1995a4d73e8685890d6" }
# Unifies s2-verification's crates.io s2-sdk dependency with the workspace sdk,
# so the sim crate can hand workspace S2Stream values to its workflow clients.
s2-sdk = { path = "sdk" }
# On Linux, upstream getrandom 0.2 invokes the raw SYS_getrandom syscall, which
# bypasses mad-turmoil's libc interposition and injects real entropy into
# deterministic simulations. The fork's `deterministic-simulation` feature
# (enabled by the s2-sim crate) routes through the interposable libc wrapper
# instead; without the feature it behaves identically to upstream.
getrandom = { git = "https://github.com/s2-streamstore/getrandom", rev = "9634f379845b3d4ea4a9f2d20b9fca28b1476e0c" }

[profile.dev]
panic = "abort"

# Optimized profile for the deterministic simulator (sim/): release-grade
# runtime without the release profile's LTO link tax, with assertions kept on
# since the simulator exists to catch bugs.
[profile.sim]
inherits = "release"
lto = false
debug-assertions = true
overflow-checks = true

[profile.release]
panic = "abort"
lto = true

[profile.ci]
inherits = "release"
lto = false
