[package]
name = "s2-api"
version.workspace = true
edition.workspace = true

[dependencies]
base64ct = { workspace = true }
bytes = { workspace = true }
compact_str = { workspace = true, features = ["serde"] }
http = { workspace = true }
itertools = { workspace = true }
prost = { workspace = true }
s2-common = { path = "../common" }
serde = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
# TODO optional
utoipa = { workspace = true }

[build-dependencies]
# TODO this should be optional & check in the generated code, like Rust SDK
# ... and Rust SDK should just depend on the proto from api!
prost-build = { workspace = true }
