[package]
name = "s2-api"
version.workspace = true
edition.workspace = true

[features]
utoipa = ["dep:utoipa"]
codegen = ["dep:prost-build"]

[dependencies]
base64ct = { workspace = true }
bytes = { workspace = true }
compact_str = { workspace = true, features = ["serde"] }
http = { workspace = true }
itertools = { workspace = true }
prost = { workspace = true }
s2-common = { path = "../common" }
serde = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
utoipa = { workspace = true, optional = true }

[build-dependencies]
prost-build = { workspace = true, optional = true }
