[package]
name = "s2-common"
version.workspace = true
edition.workspace = true

[features]
rkyv = ["dep:rkyv", "compact_str/rkyv"]
utoipa = ["dep:utoipa"]

[dependencies]
bytes = { workspace = true }
compact_str = { workspace = true, features = ["serde"] }
const_format = { workspace = true }
enum-ordinalize = { workspace = true }
enumset = { workspace = true }
futures = { workspace = true }
rkyv = { workspace = true, optional = true }
serde = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
utoipa = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
rstest = { workspace = true }
