[package]
name = "hyper-side-effect"
description = "Frame-level side-effect detection for http-body wrappers"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
http-body = "1"
pin-project-lite = "0.2"

[dev-dependencies]
bytes = { workspace = true }
http-body-util = "0.1"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
